--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@300;400;600&display=swap" rel="stylesheet">
   <title>Frontend Mentor | [Blogr]</title>
 
   
@@ -13,9 +17,22 @@
 <body>
   <header>
     <div class="container">
-      <nav>
-        
+      <nav class="menu-desktop"> 
+        <img src="./images/logo.svg" alt="logo">
+        <ul>
+          <li>Product</li>
+          <li>Company</li>
+          <li>Connect</li>
+        </ul>
+        <div>
+          <a href="#">Login</a>
+          <button>Sign Up</button>
+        </div>
       </nav>
+      <h1>A modern publishing platform</h1>
+      <p>Grow your audience and build your online brand</p>
+      <button id="start">Start for Free</button>
+      <button id="learn">Learn More</button>
     </div>
   </header>
   <!--
@@ -40,14 +57,8 @@
   Newsletter
   LinkedIn
   
-  Login
-  Sign Up
 
-  A modern publishing platform
-  Grow your audience and build your online brand
 
-  Start for Free
-  Learn More
 
   Designed for the future
 
