created code js, html and css of dropdown of navigation

--- a/index.html
+++ b/index.html
@@ -17,12 +17,34 @@
 <body>
   <header>
     <div class="container">
-      <nav class="menu-desktop"> 
+      <nav> 
         <img src="./images/logo.svg" alt="logo">
-        <ul>
-          <li>Product</li>
-          <li>Company</li>
-          <li>Connect</li>
+        <ul class="menu-desktop">
+          <li id="product">Product
+            <div class="connect">
+              <span>Overview</span>
+              <span>Pricing</span>
+              <span>Marketplace</span>
+              <span>Features</span>
+              <span>Integrations</span>
+            </div>
+          </li>
+          <li id="company">Company
+            <div class="connect">
+              <span>About</span>
+              <span>Team</span>
+              <span>Blog</span>
+              <span>Careers</span>
+            </div>
+          </li>
+          <li id="connect">Connect
+            <div class="connect">
+              <span>Contact</span>
+              <span>Newsletter</span>
+              <span>LinkedIn</span>
+            </div>
+          </li>
+          
         </ul>
         <div>
           <a href="#">Login</a>
@@ -36,30 +58,6 @@
     </div>
   </header>
   <!--
-  Product
-
-  Overview
-  Pricing
-  Marketplace
-  Features
-  Integrations
-
-  Company
-
-  About
-  Team
-  Blog
-  Careers
-
-  Connect
-
-  Contact
-  Newsletter
-  LinkedIn
-  
-
-
-
   Designed for the future
 
   Introducing an extensible editor
@@ -106,6 +104,6 @@
   Newsletter
   LinkedIn
   -->
-  
+<script src="./js/script.js"></script>
 </body>
 </html>
