--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <span>LinkedIn</span>
             </div>
           </li>
-          
+                   
         </ul>
         <div>
           <a href="#">Login</a>
@@ -57,18 +57,29 @@
       <button id="learn">Learn More</button>
     </div>
   </header>
+  <main>
+    <h1>Designed for the future</h1>
+    <div class="container">
+      <section class="future">
+        <div>
+          <h2>Introducing an extensible editor</h2>
+          <p>Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
+            The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, 
+            videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or 
+            change the looks of a blog.</p>
+            <h2>Robust content management</h2>
+            <p>Flexible content management enables users to easily move through posts. Increase the usability of your blog 
+              by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.</p>
+        </div>
+        <div>
+          <img src="./images/illustration-editor-desktop.svg" alt="">
+        </div>
+      </section>
+    </div>
+  </main>
   <!--
-  Designed for the future
-
-  Introducing an extensible editor
-  Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
-  The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, 
-  videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or 
-  change the looks of a blog.
-
-  Robust content management
-  Flexible content management enables users to easily move through posts. Increase the usability of your blog 
-  by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.
+  
+  
 
   State of the Art Infrastructure
   With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
