iniciado menu mobile

--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
           </li>
                    
         </ul>
-        <div>
+        <div >
           <a href="#">Login</a>
           <button>Sign Up</button>
         </div>
+        <img class="btn-mobile" src="./images/icon-hamburger.svg" alt="button hamburger">
       </nav>
       <h1>A modern publishing platform</h1>
       <p>Grow your audience and build your online brand</p>
@@ -72,48 +73,74 @@
               by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.</p>
         </div>
         <div>
-          <img src="./images/illustration-editor-desktop.svg" alt="">
+          <img src="./images/illustration-editor-desktop.svg" alt="desktop">
         </div>
       </section>
     </div>
+    <section class="state">
+      <div class="container">
+        <img id="circles" src="./images/bg-pattern-circles.svg" alt="circles">
+        <div>
+          <h1>State of the Art Infrastructure</h1>
+          <p>With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
+            This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.</p>
+          </div>
+        </div>
+        <img src="./images/illustration-phones.svg" alt="phones">
+    </section>
+    <div class="container">
+      <section class="powerful">
+        <div>
+          <img src="./images/illustration-laptop-desktop.svg" alt="">
+        </div>
+        <div>
+          <h2>Free, open, simple</h2>
+          <p>Blogr is a free and open source application backed by a large community of helpful developers. It supports 
+            features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, 
+            and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
+          </p>
+          <h2>Powerful tooling</h2>
+          <p>Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but
+            capable of producing even the most complicated sites.</p>
+        </div>
+      </section>
+    </div>
+    <footer>
+      <div class="container">
+        <div>
+          <img src="./images/logo.svg" alt="logo">
+        </div>
+        <div>
+          <h3>Product</h3>
+          <p>Overview</p>
+          <p>Pricing</p>
+          <p>Marketplace</p>
+          <p>Features</p>
+          <p>Integrations</p>
+        </div>
+        <div>
+          <h3>Company</h3>
+          <p>About</p>
+          <p>Team</p>
+          <p>Blog</p>
+          <p>Careers</p>
+        </div>
+        <div>
+          <h3>Connect</h3>
+          <p>Contact</p>
+          <p>Newsletter</p>
+          <p>LinkedIn</p>
+        </div>
+        <div></div>
+      </div>
+    </footer>
   </main>
-  <!--
+  <!--  
   
   
-
-  State of the Art Infrastructure
-  With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
-  This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
-
-  Free, open, simple
-  Blogr is a free and open source application backed by a large community of helpful developers. It supports 
-  features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, 
-  and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
-
-  Powerful tooling
-  Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but
-  capable of producing even the most complicated sites.
-
-  Product
-
-  Overview
-  Pricing
-  Marketplace
-  Features
-  Integrations
-
-  Company
-
-  About
-  Team
-  Blog
-  Careers
-
-  Connect
   
-  Contact
-  Newsletter
-  LinkedIn
+  
+  
   -->
 <script src="./js/script.js"></script>
 </body>
