finalized menu mobile and dropdown mobile

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </li>
                    
         </ul>
-        <div >
+        <div id="call-to-action">
           <a href="#">Login</a>
           <button>Sign Up</button>
         </div>
